using UnityEngine;

public class Model : MonoBehaviour
{
    private int difficulty;
    
    // Start is called once before the first execution of Update after the MonoBehaviour is created
    void Start()
    {

        /*GameObject obj = GameObject.Find("Square");
        SpriteRenderer sr = obj.GetComponent<SpriteRenderer>();
        sr.color = Color.blue;*/
        Debug.Log(PlayerPrefs.GetInt("difficulty"));
    }

    // Update is called once per frame
    void Update()
    {
        
    }
}
