namespace Codes.animal
{
    public class Crocodile : Carnivore
    {
        public Crocodile(int age, int gender, int hunger, int thirst) : base(age, gender, hunger, thirst)
        {
        }
    }
}