using System;

namespace Codes.animal{
	public abstract class Herbivore : Animal
	{
		
		public Herbivore(int age, int gender, int hunger, int thirst) : base(age, gender, hunger, thirst)
		{
	
		} 

	}
}
