namespace Codes.animal
{
    public class Hippo : Herbivore
    {
        public Hippo(int age, int gender, int hunger, int thirst) : base(age, gender, hunger, thirst)
        {
        }
    }
}